--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeu de capture</title>
+    <title>To the Point</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <!-- Menu principal -->
     <div id="mainMenu" class="active">
         <div class="menu-content">
-            <h1>Jeu de capture</h1>
+            <h1>To the Point</h1>
             <div class="menu-form">
                 <input 
                     type="text" 
@@ -20,7 +20,6 @@
                     required
                 >
                 <button id="startButton" class="primary-button">Rejoindre la salle</button>
-                <button id="settingsButton" class="secondary-button">Paramètres</button>
             </div>
         </div>
     </div>
@@ -35,6 +34,7 @@
                 </div>
                 <div class="waiting-room-buttons">
                     <button id="startGameButton" class="primary-button" disabled>Lezgoooo</button>
+                    <button id="waitingRoomSettings" class="secondary-button">Paramètres</button>
                     <button id="leaveRoomButton" class="secondary-button">Quitter la salle</button>
                 </div>
             </div>
@@ -65,10 +65,18 @@
                 <input 
                     type="number" 
                     id="initialBotCount" 
-                    value="20" 
+                    value="30" 
                     min="5" 
-                    max="50"
+                    max="200"
                 >
+                <div class="setting-header">
+                    <input type="checkbox" id="enableBlackBot">
+                    <label for="enableBlackBot">Activer le Bot Noir</label>
+                </div>
+                <div class="setting-details">
+                    <label for="blackBotCount">Nombre de Bots Noirs:</label>
+                    <input type="number" id="blackBotCount" min="1" max="5" value="1">
+                </div>
             </div>
 
             <!-- Paramètres du bonus de vitesse -->
@@ -88,7 +96,7 @@
                     <input 
                         type="number" 
                         id="speedBoostDuration" 
-                        value="5" 
+                        value="10" 
                         min="1" 
                         max="30"
                     >
@@ -114,7 +122,7 @@
                     <input 
                         type="number" 
                         id="invincibilityDuration" 
-                        value="5" 
+                        value="10" 
                         min="1" 
                         max="30"
                     >
@@ -140,7 +148,7 @@
                     <input 
                         type="number" 
                         id="revealDuration" 
-                        value="5" 
+                        value="10" 
                         min="1" 
                         max="30"
                     >
