--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <title>To the Point</title>
     <link rel="stylesheet" href="/styles.css">
     <link rel="preload" href="/assets/fonts/Chewy-Regular.ttf" as="font" type="font/ttf" crossorigin>
@@ -211,6 +213,17 @@
         <!-- Conteneur du canvas -->
         <div id="gameContainer">
             <canvas id="gameCanvas" style="position: absolute; top: 0; left: 0;" width="100%" height="100%"></canvas>
+        </div>
+
+        <div id="mobileControls" class="mobile-controls">
+            <div id="joystick" class="joystick">
+                <div class="joystick-base">
+                    <div class="joystick-stick"></div>
+                </div>
+            </div>
+            <button id="mobileLocateButton" class="mobile-action-button">
+                <img src="/assets/images/locate.png" alt="Locate">
+            </button>
         </div>
 
         <!-- Interface de jeu -->
