Optimisation compatibilité mobile

--- a/public/index.html
+++ b/public/index.html
@@ -216,13 +216,16 @@
         </div>
 
         <div id="mobileControls" class="mobile-controls">
-            <div id="joystick" class="joystick">
+            <!-- Joystick -->
+            <div class="joystick">
                 <div class="joystick-base">
                     <div class="joystick-stick"></div>
                 </div>
             </div>
+        
+            <!-- Bouton de localisation -->
             <button id="mobileLocateButton" class="mobile-action-button">
-                <img src="/assets/images/locate.png" alt="Locate">
+                <img src="/assets/images/locate.png" alt="Localiser" />
             </button>
         </div>
 
