--- a/public/index.html
+++ b/public/index.html
@@ -169,24 +169,27 @@
 
             <div class="setting-group">
                 <div class="setting-header">
-                    <input type="checkbox" id="enableSpecialZones" checked>
-                    <label for="enableSpecialZones">Activer les zones spéciales</label>
+                    <div>
+                        <input type="checkbox" id="enableSpecialZones">
+                        <label for="enableSpecialZones">Activer les zones spéciales</label>
+                    </div>
                 </div>
+    
                 <div class="setting-details">
                     <div class="zone-type">
-                        <input type="checkbox" id="enableChaosZone" checked>
+                        <input type="checkbox" id="enableChaosZone">
                         <label for="enableChaosZone">Zone de Chaos</label>
                     </div>
                     <div class="zone-type">
-                        <input type="checkbox" id="enableRepelZone" checked>
+                        <input type="checkbox" id="enableRepelZone">
                         <label for="enableRepelZone">Zone Répulsive</label>
                     </div>
                     <div class="zone-type">
-                        <input type="checkbox" id="enableAttractZone" checked>
+                        <input type="checkbox" id="enableAttractZone">
                         <label for="enableAttractZone">Zone Attractive</label>
                     </div>
                     <div class="zone-type">
-                        <input type="checkbox" id="enableStealthZone" checked>
+                        <input type="checkbox" id="enableStealthZone">
                         <label for="enableStealthZone">Zone d'Invisibilité</label>
                     </div>
                 </div>
@@ -194,15 +197,9 @@
 
             <!-- Boutons du menu des paramètres -->
             <div class="settings-buttons">
-                <button id="saveSettingsButton" class="primary-button">
-                    Enregistrer
-                </button>
-                <button id="resetSettingsButton" class="secondary-button reset-button">
-                    Réinitialiser
-                </button>   
-                <button id="backToMenuButton" class="secondary-button">
-                    Retour
-                </button>
+                <button id="saveSettingsButton" class="primary-button">Enregistrer</button>
+                <button id="resetSettingsButton" class="secondary-button">Réinitialiser</button>
+                <button id="backToMenuButton" class="secondary-button">Retour</button>
             </div>
         
         </div>
