--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
     <title>To the Point</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/styles.css" rel="preload">
     <link rel="preload" href="/assets/fonts/Chewy-Regular.ttf" as="font" type="font/ttf" crossorigin>
 </head>
 <body>
