Ajustement zoom mobile

--- a/public/index.html
+++ b/public/index.html
@@ -427,7 +427,7 @@
             </div>
         </div>
         <button id="mobileLocateButton" class="mobile-action-button">
-            <img src="/assets/images/locate.png" alt="Localiser">
+            <img src="/assets/images/locate.gif" alt="Localiser">
         </button>
     </div>
 
