--- a/public/index.html
+++ b/public/index.html
@@ -200,6 +200,21 @@
    <div id="settingsMenu" style="display: none;">
     <div class="settings-content">
         <h2>Paramètres du jeu</h2>
+        <div class="setting-group">
+            <div class="setting-header">
+                Audio
+            </div>
+            <div class="setting-details">
+                <div>
+                    Musique : 
+                    <input type="range" id="musicVolume" min="0" max="100" value="30">
+                </div>
+                <div>
+                    Sons : 
+                    <input type="range" id="soundVolume" min="0" max="100" value="50">
+                </div>
+            </div>
+        </div>
         
         <!-- Paramètres de base -->
         <div class="setting-group">
