Ajout d'un sélecteur de map et du mode miroir dans les paramètres de la partie

--- a/public/index.html
+++ b/public/index.html
@@ -224,6 +224,24 @@
             </div>
         </div>
 
+        <div class="setting-group">
+            <div class="setting-header"><h3>Map</h3></div>
+            
+            <div class="setting-details">
+              <div>
+                <span>Choisir une map:</span>
+                <select id="mapSelector" class="text-input">
+                    <option value="map1" selected>Tokyo</option>
+                </select>
+              </div>
+          
+              <div>
+                <span>Mode miroir:</span>
+                <input type="checkbox" id="mirrorMode" class="toggle-input">
+              </div>
+            </div>
+          </div>
+
         <!-- Paramètres des bots -->
         <div class="setting-group">
             <div class="setting-header">
