--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
                 <span class="ninja">NINJA</span>
             </h1>
             <div class="menu-form">
-                <input type="text" id="nicknameInput" placeholder="Votre pseudo" maxlength="20">
+                <input type="text" id="nicknameInput" placeholder="Entrez votre pseudo (ex: Bogossdu74)" maxlength="20">
                 <button id="startButton" class="primary-button" disabled>Rejoindre la salle</button>
             </div>
         </div>
@@ -195,21 +195,6 @@
                 </div>
                                     <!-- Boutons de contrôle de la salle -->
                                     <div class="waiting-room-buttons">
-                                        <button id="startGameButton" class="primary-button" title="Lancer la partie">
-                                            <span class="button-text">Lancer la partie</span>
-                                            <svg class="button-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                                <path d="M5 3l14 9-14 9V3z"/>
-                                            </svg>
-                                        </button>
-                                        
-                                        <button id="waitingRoomSettings" class="secondary-button" title="Paramètres">
-                                            <span class="button-text">Paramètres de la partie</span>
-                                            <svg class="button-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                                <path d="M12 15a3 3 0 100-6 3 3 0 000 6z"/>
-                                                <path d="M19.4 15a1.65 1.65 0 00.33 1.82l.06.06a2 2 0 010 2.83 2 2 0 01-2.83 0l-.06-.06a1.65 1.65 0 00-1.82-.33 1.65 1.65 0 00-1 1.51V21a2 2 0 01-2 2 2 2 0 01-2-2v-.09A1.65 1.65 0 009 19.4a1.65 1.65 0 00-1.82.33l-.06.06a2 2 0 01-2.83 0 2 2 0 010-2.83l.06-.06a1.65 1.65 0 00.33-1.82 1.65 1.65 0 00-1.51-1H3a2 2 0 01-2-2 2 2 0 012-2h.09A1.65 1.65 0 004.6 9a1.65 1.65 0 00-.33-1.82l-.06-.06a2 2 0 010-2.83 2 2 0 012.83 0l.06.06a1.65 1.65 0 001.82.33H9a1.65 1.65 0 001-1.51V3a2 2 0 012-2 2 2 0 012 2v.09a1.65 1.65 0 001 1.51 1.65 1.65 0 001.82-.33l.06-.06a2 2 0 012.83 0 2 2 0 010 2.83l-.06.06a1.65 1.65 0 00-.33 1.82V9a1.65 1.65 0 001.51 1H21a2 2 0 012 2 2 2 0 01-2 2h-.09a1.65 1.65 0 00-1.51 1z"/>
-                                            </svg>
-                                        </button>
-                                        
                                         <button id="leaveRoomButton" class="secondary-button" title="Quitter la salle">
                                             <span class="button-text">Quitter la salle</span>
                                             <svg class="button-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -218,8 +203,32 @@
                                                 <path d="M21 12H9"/>
                                             </svg>
                                         </button>
+                                        <button id="waitingRoomSettings" class="secondary-button" title="Paramètres">
+                                            <span class="button-text">Paramètres de la partie</span>
+                                            <svg class="button-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                                <path d="M12 15a3 3 0 100-6 3 3 0 000 6z"/>
+                                                <path d="M19.4 15a1.65 1.65 0 00.33 1.82l.06.06a2 2 0 010 2.83 2 2 0 01-2.83 0l-.06-.06a1.65 1.65 0 00-1.82-.33 1.65 1.65 0 00-1 1.51V21a2 2 0 01-2 2 2 2 0 01-2-2v-.09A1.65 1.65 0 009 19.4a1.65 1.65 0 00-1.82.33l-.06.06a2 2 0 01-2.83 0 2 2 0 010-2.83l.06-.06a1.65 1.65 0 00.33-1.82 1.65 1.65 0 00-1.51-1H3a2 2 0 01-2-2 2 2 0 012-2h.09A1.65 1.65 0 004.6 9a1.65 1.65 0 00-.33-1.82l-.06-.06a2 2 0 010-2.83 2 2 0 012.83 0l.06.06a1.65 1.65 0 001.82.33H9a1.65 1.65 0 001-1.51V3a2 2 0 012-2 2 2 0 012 2v.09a1.65 1.65 0 001 1.51 1.65 1.65 0 001.82-.33l.06-.06a2 2 0 012.83 0 2 2 0 010 2.83l-.06.06a1.65 1.65 0 00-.33 1.82V9a1.65 1.65 0 001.51 1H21a2 2 0 012 2 2 2 0 01-2 2h-.09a1.65 1.65 0 00-1.51 1z"/>
+                                            </svg>
+                                        </button>
+                                        <button id="startGameButton" class="primary-button" title="Lancer la partie">
+                                            <span class="button-text">Lancer la partie</span>
+                                            <svg class="button-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                                <path d="M5 3l14 9-14 9V3z"/>
+                                            </svg>
+                                        </button>
                                     </div>
             </div>
+        </div>
+    </div>
+    <!-- Overlay de compte à rebours -->
+    <div id="countdownOverlay" class="countdown-overlay hidden">
+        <div class="countdown-content">
+            <h2>La partie commence dans</h2>
+            <div class="countdown-timer">
+                <span id="countdownValue">5</span>
+                <span class="countdown-text">secondes</span>
+            </div>
+            <button id="cancelCountdown" class="secondary-button owner-only">Annuler le lancement</button>
         </div>
     </div>
     <!-- Menu des paramètres -->
@@ -449,9 +458,9 @@
 
         <!-- Boutons des paramètres -->
         <div class="settings-buttons">
-            <button id="saveSettingsButton" class="primary-button">Enregistrer</button>
-            <button id="resetSettingsButton" class="secondary-button">Réinitialiser</button>
             <button id="backToMenuButton" class="secondary-button">Retour</button>
+            <button id="resetSettingsButton" class="secondary-button">Réinitialiser</button>
+            <button id="saveSettingsButton" class="primary-button">Enregistrer</button>
         </div>
     </div>
 </div>
