--- a/public/index.html
+++ b/public/index.html
@@ -128,8 +128,12 @@
                     <div class="chat-container">
                         <div class="chat-messages"></div>
                         <form id="chatForm">
-                            <input type="text" id="chatInput" placeholder="Votre message...">
-                            <button type="submit" class="chat-send-button">Envoyer</button>
+                            <div class="chat-input-container">
+                                <input type="text" id="chatInput" placeholder="Votre message...">
+                                <button type="submit" class="chat-send-button" title="Envoyer">
+                                    <img src="/assets/images/send.svg" alt="Envoyer" class="send-icon">
+                                </button>
+                            </div>
                         </form>
                     </div>
                 </div>
