--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
             <img src="/assets/images/mode.svg" class="map-icon" alt="Map mode icon">
             <div class="map-info">
                 <div class="map-name">Carte : <span class="map-value">Tokyo</span></div>
-                <div class="map-mode">Mode : <span class="mode-value">Normal</span></div>
+                <div class="map-mode">Mode : <span class="mode-value">Classique</span></div>
             </div>
         </button>
     </div>
@@ -198,6 +198,26 @@
                             <span class="toggle-option">Miroir</span>
                         </div>
                     </label>
+                </div>
+            </div>
+
+            <div class="game-mode-container">
+                <h3>Mode de jeu</h3>
+                <div class="mode-buttons">
+                    <button class="mode-button selected" data-mode="classic">
+                        <div class="mode-icon">🏃</div>
+                        <div class="mode-info">
+                            <h4>Classique</h4>
+                            <p>Captures rapides et dynamiques par collision</p>
+                        </div>
+                    </button>
+                    <button class="mode-button" data-mode="tactical">
+                        <div class="mode-icon">🎯</div>
+                        <div class="mode-info">
+                            <h4>Tactique</h4>
+                            <p>Captures stratégiques avec touche d'action</p>
+                        </div>
+                    </button>
                 </div>
             </div>
     
